<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="address">Address:</string>
    <string name="state">State:</string>
    <string name="election_info">Election Info (click me)</string>
    <string name="ballot_info">Ballot Info (click me)</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="use_my_location">Use my location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="representative_search">Representative Search</string>
    <string name="permission_denied_explanation">To use this feature, please grant the location permission to the app.</string>
    <string name="settings">Settings</string>
    <string name="picture_of_representative">Picture of representative.</string>
</resources>
