<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <TextView
            android:id="@+id/search_title"
            style="@style/HeaderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representative_search"
            android:textSize="@dimen/header2_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="postalAddress"
            android:hint="@string/address_line_1"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.addressLine1}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints="postalAddress"
            android:hint="@string/address_line_2"
            android:inputType="textPostalAddress"
            android:text="@{viewModel.addressLine2}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="postalAddress"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.city}"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <Spinner
            android:id="@+id/state"
            style="@style/SpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints="postalAddress"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"
            app:stateValue="@{viewModel.state}" />

        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/zip_code"
            android:inputType="number"
            android:maxLength="5"
            android:text="@={viewModel.zip}"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <Button
            android:id="@+id/button_search"
            style="@style/LargeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representatives"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <Button
            android:id="@+id/button_location"
            style="@style/LargeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_my_location"
            app:layout_constraintTop_toBottomOf="@id/button_search" />

        <TextView
            android:id="@+id/representative_title"
            style="@style/HeaderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_representatives"
            android:textSize="@dimen/header3_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representativesRecyclerView"
            style="@style/RecyclerViewLayout"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:listRepresentatives="@{viewModel.representatives}"
            tools:itemCount="5"
            tools:listitem="@layout/representative_view_item" />


    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>