<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.electionName}"
            tools:title="This is a test election" />

        <TextView
            android:id="@+id/election_date"
            style="@style/HeaderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:textSize="@dimen/header4_size"
            app:dateFormatText="@{viewModel.electionDay}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="Sun Mar 03 2022 @ 4PM" />

        <TextView
            android:id="@+id/state_header"
            style="@style/HeaderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textSize="@dimen/header5_size"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <TextView
            android:id="@+id/election_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/election_info"
            android:textColorLink="@color/blue"
            android:visibility="@{viewModel.electionInfoUrl == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <TextView
            android:id="@+id/ballot_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/ballot_info"
            android:textColorLink="@color/blue"
            android:visibility="@{viewModel.ballotInfoUrl == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_info" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.address == null ? View.GONE : View.VISIBLE}"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/HeaderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="@dimen/header4_size"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/ballot_info" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@{viewModel.address.toFormattedString()}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            tools:text="1500 11th Street, Sacramento, CA 95814" />

        <!-- TODO: Add button to save election to Room -->
        <Button
            android:id="@+id/save_button"
            style="@style/LargeButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@{viewModel.isSaved ? @string/unfollow_election : @string/follow_election}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/follow_election" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>